<resources>
    <string name="app_name">SampleLogIn</string>
    <string name="text_welcome">Welcome to Sample LogIn</string>
    <string name="text_user_id">Mobile No</string>
    <string name="text_password">Password</string>
    <string name="button_log_in">Log In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="text_create_account">Create your account</string>
    <string name="text_name">Name</string>
    <string name="text_umobile_number">Mobile Number</string>
    <string name="text_email_id">Email Id</string>
    <string name="text_location">Location</string>
    <string name="text_confirm_password">Confirm Password</string>
</resources>
